# graph-partitioning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  get_models.sh  onnx_shape_inference.py  proto-gen.sh  requirements.txt  run_tests.sh  test_onnx.py
include/graph-partitioning/: algorithms.hpp  graph.hpp  onnx_reader.hpp  onnx_writer.hpp  utils.hpp
lib/protos/: CMakeLists.txt
src/: algo_unsupported_detail.hpp  algorithms.cc  graph.cc  main.cc  onnx_reader.cc  onnx_writer.cc  utils.cc
tests/: resnet50_onnx.toml  test_onnx.py
